--- a/P009144.opf/meta.yml
+++ b/P009144.opf/meta.yml
@@ -1,7 +1,7 @@
-id: opecha:P009144
+id: P009144
 initial_creation_type: ocr
 source_metadata:
   id: bdr:W1KG987
   title: མདོ་མཁྱེན་བརྩེ་ཡེ་ཤེས་རྡོ་རྗེའི་གདུང་རྒྱུད་རིམ་བྱོན་གྱི་རྣམ་ཐར་གསལ་བའི་མེ་ལོང་
-  volume: ''
   author: ''
+  volumes: {}
