--- a/P009144.opf/layers/v001/Pagination.yml
+++ b/P009144.opf/layers/v001/Pagination.yml
@@ -1,5 +1,5 @@
 id: a7b371b8a8d24483a9568c33a2110481
-annotation_type: pagination
+annotation_type: Pagination
 revision: '00001'
 annotations:
   1a15d109923743728bd8a2070f0bbb13:
